# my_ipc

./: .gitignore  .venv  pyproject.toml
src/MyIPC/: ipc_client.py  ipc_server.py
src/my_ipc/: ipc_client.py  ipc_client_embedded.py  ipc_server.py  ipc_server_embedded.py  public.py
src/my_ipc_utils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
