[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-ipc"          # 包名，pip 安装时使用, 必须使用小写字母和连字符
version = "0.1.0"                 # 版本号
authors = [
  { name="Evolonation", email="zhaozhengyang@buaa.edu.cn" },
]
description = "My tools for conversation between evaluation script and models"
# readme = "README.md"              # 可选
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

# 如果你的工具有其他依赖，比如 requests
dependencies = [
  "numpy",
]

[tool.setuptools]
package-dir = {"" = "src"}